--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -4,13 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link
+        href="https://fonts.googleapis.com/css?family=Titillium+Web:400,300,600"
+        rel="stylesheet"
+        type="text/css"
+    />
+    <link rel="stylesheet" href="../client/css/index.css">
+
+
     <title>Testing</title>
 </head>
 <body>
 
     <form action="/" method="post" class="signup-form">
 
-        <h1>portfolio</h1>
+        <h1>JGRS Portfolio</h1>
         <h2 class="sign-up-error"></h2>
 
         <input type="text" placeholder="full name" class="name" name="name">
@@ -24,7 +33,7 @@
 
     <form action="/" method= "post" class="login-form">
 
-            <h1>portfolios</h1>
+            <h1>JGRS Portfolio</h1>
             <h2 class="login-error"></h2>
 
             <input type="text" name="email" placeholder="email">
