--- a/templates/edit-portfolio.ejs
+++ b/templates/edit-portfolio.ejs
@@ -70,7 +70,10 @@
 
         <div class="right-column">
             <section class="projects">
+
+                <button class="edit_projects">edit</button>
                 <button class="colorRightBtn">color</button>
+                <button class="add_projects">add project</button>
 
                 <h2 class="projects-heading">Projects</h2>
                 <div class="projects-grid">
@@ -78,12 +81,33 @@
                     <!-- projects generate here -->
 
                 </div>
-                <button class="add_projects">add project</button>
             </section>
             <section class="skills">
+            
+            <button class="edit_skills">edit</button>
+            <button class="add_skills">add skills</button>
+
                 <h2 class="skills-heading">Skills</h2>
                 <div class="skills-grid">
-                    
+                    <div class="skills-container front-end">
+                        <h3 class="skill-heading">Front-End</h3>
+
+                        <!-- front end list generates here -->
+
+                    </div>
+                    <div class="skills-container back-end">
+                        <h3 class="skill-heading">Back-End</h3>
+                        
+                        <!-- back end list generates here -->
+
+                    </div>
+                    <div class="skills-container other">
+                        <h3 class="skill-heading">Other</h3>
+
+                        <!-- other list generates here -->
+                        
+                        </ul>
+                    </div>
                 </div>
             </section>
         </div>
@@ -95,32 +119,27 @@
 <div class="pop-up">
     <!-- ABOUT -->
 
+
     <div class="edit_about_div edit_div">
-        <button>X</button>
 
-    <div class="edit_about_div edit_div" tabindex="-1" role="dialog">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Modal title</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
+        <form method="patch" class="about-form">
 
-            <div class="modal-body">
-                <p>Modal body text goes here.</p>
-            </div>
-            
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary">Save changes</button>
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            </div>
-        </div>
+            <h2 class="heading"> About You</h2>
+
+            <input type="text" placeholder="Location" class="user_location" name="user_location">
+
+            <input type="text" placeholder="Welcome Bio" class="user_welcome" name="user_welcome">
+
+            <input type="text" placeholder="Contact Pitch" class="user-pitch" name="user_pitch">
+
+            <button>Update</button>
+
+
+
+        </form>
+
+
     </div>
-    </div>
-
-
 
     <!-- CONTACT -->
     
@@ -277,8 +296,8 @@
 
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="/js/update_portfolio.js"></script>
-<script src="/js/update_db.js"></script>
 <script src="/js/edit_port_modal.js"></script>
+<script src="/js/update_db.js"></script>
 
 </body>
 </html>
